k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: gleb-portfolio
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
